# nexus-blue-pill-test-app

./: CMakeLists.txt  Makefile  STM32F103C8Tx_FLASH.ld  arm-none-eabi.cmake  openocd.cfg  west.yml
include/: platform_config.h
platform/: platform_config.c
src/: main.c  startup_stm32f103c8tx.s
